Update design system (color, typography)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="light_primary">#FF00658D</color>
+    <color name="light_secondary">#FF4F616E</color>
+    <color name="light_tertiary">#FF62597C</color>
+    <color name="dark_primary">#FF82CFFF</color>
+    <color name="dark_secondary">#FFB6C9D8</color>
+    <color name="dark_tertiary">#FFCCC1E9</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
